--- a/app/src/main/res/layout/activity_recycler_view_test.xml
+++ b/app/src/main/res/layout/activity_recycler_view_test.xml
@@ -4,13 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".headList.RecyclerViewTestActivity">
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/list_main"
+    <com.example.demowork1.headList.TestHeaderRecyclerView
+        android:id="@+id/list_test_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
