--- a/app/src/main/res/layout/activity_test_anim.xml
+++ b/app/src/main/res/layout/activity_test_anim.xml
@@ -8,10 +8,38 @@
 
     <ImageView
         android:id="@+id/img_anim1"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/icon_back_left"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="50dp"
-        android:layout_height="50dp"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_flash_anim"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="选择补间动画"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/img_anim1" />
+
+    <Button
+        android:id="@+id/btn_property_anim"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="选择属性动画"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_flash_anim" />
+
+    <com.example.demowork1.anim.AnimButtonsView
+        android:id="@+id/anim_button_view1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_property_anim" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
