--- a/app/src/main/res/layout/activity_test_list_page.xml
+++ b/app/src/main/res/layout/activity_test_list_page.xml
@@ -7,15 +7,27 @@
     tools:context=".testListPages.TestListPageActivity">
 
     <Button
-        android:id="@+id/btn_list_page"
+        android:id="@+id/btn_add_list_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="添加data到数据库" />
+    <Button
+        android:id="@+id/btn_delete_list_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="清空数据库" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/page_list"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/refresh_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/page_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 
 </LinearLayout>
 
