输入框增加格式校验测试代码

--- a/app/src/main/res/layout/activity_annotation_test.xml
+++ b/app/src/main/res/layout/activity_annotation_test.xml
@@ -4,7 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
     tools:context=".annotation.AnnotationTestActivity">
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/input_layout_test"
+        android:layout_width="match_parent"
+        app:passwordToggleEnabled="true"
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/edit_input_test"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+    </com.google.android.material.textfield.TextInputLayout>
 
 </LinearLayout>
