1.添加代码内执行adb指令的功能；2.删除无用代码

--- a/app/src/main/res/layout/activity_annotation_test.xml
+++ b/app/src/main/res/layout/activity_annotation_test.xml
@@ -20,4 +20,12 @@
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
 
+
+    <Button
+        android:id="@+id/btn_adb_cmd"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_10"
+        android:text="adb 指令测试" />
+
 </LinearLayout>
