--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -6,16 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".notification.NotificationActivity">
 
-    <Button
-        android:text="发送一个通知"
-        android:id="@+id/btn_notification1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <TextView
-        android:id="@+id/text_notification"
-        android:layout_marginTop="10dp"
-        android:layout_width="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_notification"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
 </LinearLayout>
