--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -6,20 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".service.ServiceActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <TextView
+        android:layout_marginBottom="@dimen/dp_10"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:id="@+id/tv_ht"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/app_name"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_ht">
 
         <Button
             android:id="@+id/btn_open_service"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="打开Service" />
+
         <Button
             android:id="@+id/btn_stop_service"
             android:layout_width="wrap_content"
@@ -39,6 +51,14 @@
             android:text="解绑Service" />
 
     </LinearLayout>
+
+    <Button
+        android:text="IntentService测试"
+        app:layout_constraintTop_toBottomOf="@id/tv_ht"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
