--- a/app/src/main/res/layout/item_single_test_layout.xml
+++ b/app/src/main/res/layout/item_single_test_layout.xml
@@ -5,26 +5,26 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:id="@+id/tv_single_type_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="20dp"
         android:textSize="16sp"
-        android:id="@+id/tv_single_type_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@id/tv_single_type_content"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:textSize="12sp"
         android:id="@+id/tv_single_type_content"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_single_type_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
